changed styles to fix overflow of <a> and <li> tags + changes to dotcom

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,6 +1,6 @@
 /* regular styles */
 
-p, h1,h2,h3,h4,h5,h6 { 
+p,a, li, h1,h2,h3,h4,h5,h6 { 
   overflow-wrap: break-word;
   word-wrap: break-word;
 
